package tribollojfx.demo;

public enum Priorite {
    BASSE,
    NORMALE,
    HAUTE,
    URGENTE
}
