package tribollojfx.demo;

import java.util.List;

public interface TaskModelObservateur {
    void notifier(List<Task> tasks);
}