@startuml
Title Diagramme de Classes - Itération 1 COMPLET

package "Model" {
    enum Statut {
        A_FAIRE
        EN_COURS
        TERMINEE
        ARCHIVEE
        BLOQUEE
    }

    enum Priorite {
        BASSE
        NORMALE
        HAUTE
        URGENTE
    }

    class Task {
        - id: UUID
        - titre: String
        - description: String
        - statut: Statut
        - priorite: Priorite
        - dateDebut: LocalDateTime
        - dateFin: LocalDateTime
        + Task(String, String, Priorite, LocalDateTime, LocalDateTime)
        + setTitre(String): void
        + setDescription(String): void
        + setPriorite(Priorite): void
        + changerStatut(Statut): void
        + estArchivee(): boolean
        + toString(): String
    }

    class TaskFactory {
        + creerTask(String, Priorite): Task
        + creerTask(String, Priorite, LocalDateTime, LocalDateTime): Task
    }

    Task --> Statut
    Task --> Priorite
    TaskFactory --> Task : «create»
}

package "Controleur" {
    class ArchiveControleur {
        - archives: List<Task>
        + archiver(Task): void
        + restaurer(Task): void
        + getArchives(): List<Task>
    }

    class TaskModel {
        - taches: List<Task>
        - observers: List<TaskModelObservateur>
        - repository: TxtTaskRepository
        + getTaches(): List<Task>
        + ajouterTask(Task): void
        + supprimerTask(Task): void
        + addObserver(TaskModelObservateur): void
        + notifier(): void
    }

    interface TaskModelObservateur {
        + onTasksChanged(List<Task>): void
    }

    class TxtTaskRepository {
        + saveAll(List<Task>): void
        + loadAll(): List<Task>
    }

    ArchiveControleur --> Task : gère
    TaskModel --> Task : contient
    TaskModel --> TaskModelObservateur : notifie
    TaskModel --> TxtTaskRepository : utilise
}

package "View" {
    class Main {
        + start(Stage): void
        + onTasksChanged(List<Task>): void
        - creerBoutonAjout(Statut): Button
        - creerCarte(Task): HBox
    }

    Main --> TaskModel : «create»
    Main --> Task : affiche
    Main -^ TaskModelObservateur
}
@enduml